@@ -259,15 +259,10 @@ public class ExampleGenerator extends AbstractJavaGenerator {
         answer.setVisibility(JavaVisibility.PUBLIC);
         answer.setStatic(true);
         answer.setSuperClass(FullyQualifiedJavaType.getGeneratedCriteriaInstance());
-        
-        answer.addJavaDocLine("/**"); //$NON-NLS-1$
-        answer.addJavaDocLine(" * This class was generated by Apache iBATIS Ibator."); //$NON-NLS-1$
-        answer.addJavaDocLine(" * This class exists to make extending the example classes easier."); //$NON-NLS-1$
-        answer.addJavaDocLine(" * You may add any custom where clause method to this class, and"); //$NON-NLS-1$
-        answer.addJavaDocLine(" * the method will survive a Java merge (Ibator will never delete"); //$NON-NLS-1$
-        answer.addJavaDocLine(" * this class)."); //$NON-NLS-1$
-        answer.addJavaDocLine(" */"); //$NON-NLS-1$
 
+        ibatorContext.getCommentGenerator().addClassComment(answer,
+                introspectedTable, true);
+        
         method = new Method();
         method.setVisibility(JavaVisibility.PROTECTED);
         method.setName("Criteria"); //$NON-NLS-1$
