@@ -14,22 +14,28 @@
     <module>ibator-systests-ibatis3</module>
   </modules>
 
+<!--
   <build>
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-release-plugin</artifactId>
-        <version>2.0</version>
+        <artifactId>maven-deploy-plugin</artifactId>
+        <version>2.5</version>
+        <configuration>
+          <skip>true</skip>
+        </configuration>
       </plugin>
     </plugins>
   </build>
+-->
 
-
-  <scm>
-    <connection>scm:svn:http://svn.apache.org/repos/asf/ibatis/java/ibator/trunk/core/</connection>
-    <developerConnection>scm:svn:https://svn.apache.org/repos/asf/ibatis/java/ibator/trunk/core</developerConnection>
-    <tag>HEAD</tag>
-    <url>http://svn.apache.org/viewvc/ibatis/java/ibator/trunk/core/</url>
-  </scm>
-
+  <distributionManagement>
+    <repository>
+      <uniqueVersion>false</uniqueVersion>
+      <id>local</id>
+      <name>Local Repository</name>
+      <url>file:/Temp/IbatorDeploy</url>
+      <layout>default</layout>
+    </repository>  
+  </distributionManagement>
 </project>
