@@ -43,6 +43,7 @@ Enhancements:
 18. Addedd support for "distinct" on select by example methods
 19. Added new "or" method to example classes
 20. Added new "useCompoundPropertyNames" property on <table>
+21. Further improved extensibility of the example classes
 
 
 -------------------------------------------------------------------------------
